# mocode

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/mocode/: Cargo.toml
crates/mocode-api/: Cargo.toml
crates/mocode-api/src/: lib.rs
crates/mocode-core/: Cargo.toml
crates/mocode-core/src/: lib.rs
crates/mocode-floem-demo/: Cargo.toml
crates/mocode-floem-demo/src/: main.rs
crates/mocode-gpui-demo/: Cargo.toml
crates/mocode-gpui-demo/src/: app.rs  component.rs  fixtures.rs  main.rs
crates/mocode-mihomo-lint/: Cargo.toml
crates/mocode-mihomo-lint/src/: lib.rs
crates/mocode-mihomo-schema/: Cargo.toml
crates/mocode-mihomo-schema/src/: lib.rs
crates/mocode-text/: Cargo.toml
crates/mocode-text/src/: lib.rs
crates/mocode-yaml/: Cargo.toml
crates/mocode-yaml/src/: lib.rs
crates/mocode/src/: app.rs  component.rs  fixtures.rs  main.rs
docs/: architecture.md  editor-features.md  editor-gap-closure-plan.md  gpui-vs-floem-evaluation.md  mihomo-schema-design.md  prototype-validation-checklist.md  research.md  roadmap.md  spec.md  ui-framework-decision.md
docs/superpowers/plans/: 2026-06-17-gpui-interactive-editing.md  2026-06-17-phase-1-core.md  2026-06-17-phase-2-gpui-demo.md  2026-06-18-completion-popup-positioning.md  2026-06-18-floem-basic-input-parity.md  2026-06-18-floem-semantic-demo-parity.md  2026-06-18-gpui-semantic-interactions.md  2026-06-18-gpui-vs-floem-evaluation.md  2026-06-18-prototype-fixture-selector.md  2026-06-18-prototype-validation-checklist.md  2026-06-18-selection-copy-parity.md
examples/configs/: dialer-proxy.yaml  dns.yaml  invalid-reference.yaml  invalid-yaml.yaml  large-20000.yaml  large.yaml  minimal.yaml  providers.yaml  proxy-groups.yaml  tun.yaml
tests/fixtures/: dialer-cycle.yaml  invalid-reference.yaml  minimal.yaml
