[package]
name = "mocode-mihomo-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Mihomo semantic linting for mocode"

[dependencies]
mocode-mihomo-schema = { path = "../mocode-mihomo-schema" }
mocode-text = { path = "../mocode-text" }
yaml-rust2 = "0.11"
